# chaturanga

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  dir.txt
src/: main.cpp
src/eval/: eval.cpp  eval.h
src/game/: chess.h  game.cpp  game.h
src/movegen/: attacks.h  legalmovegen.h  movegen.cpp  movegen.h  movelist.h
src/position/: chessman.h  color.h  move.h  piece.h  pieces.h  position.cpp  position.h  square.h
src/search/: minmaxdfs.h  search.cpp  search.h
src/uci/: uci.cpp  uci.h
